# WebC-llvm-compiler

./: .gitignore  .gitpod.yml  CMakeLists.txt  README.md  install.sh  main.cpp
.github/workflows/: cmake.yml
args/: args_parser.cpp  cmd_line.hpp  command.hpp
ast/: NodeAST.cpp  NodeAST.hpp
codegen/: CodeGen.h
compiler/: Compiler.cpp  Compiler.h  ErrHelper.cpp  Global.cpp  Global.h
module/json/src/: kjson.h
module/sql/: CMakeLists.txt
module/sql/src/: ksql.cpp  ksql.h  ksqldemo.cpp
module/string/src/: kstring.cpp
module/web/: CMakeLists.txt
module/web/src/: serverdemo.cpp  web.cpp  web.hpp
parser/: FileReader.cpp  FileReader.h  IFileReader.h  Lexer.cpp  Lexer.h  NetworkReader.cpp  NetworkReader.h  Parser.y  StringReader.h
pass/: BasicBlockCounter.cpp  BasicBlockCounter.h  DeadCodeEliminatePass.cpp  DeadCodeEliminatePass.h  RecursiveToLoopPass.cpp  RecursiveToLoopPass.h  TailRecursion.cpp  TailRecursion.h  TimeAnalysisPass.cpp  TimeAnalysisPass.h
test/case/wbl_test/: recursion.wbl
test/case/webc_test/: sqltest.webc
ui/: widgets.cpp  widgets.h
ui/css/: main.css
ui/ui/: main.glade
